# tag-tag

./: components.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
src/: App.vue  auto-imports.d.ts  components.d.ts  global.d.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: ColorModeToggle.vue  FileCard.vue  Greet.vue  Image.vue  Logo.vue  WindowTitlebar.vue  file-card.vue
src/components/application/: index.vue
src/components/basic-form/: index.vue  type.ts
src/components/drawer-provider/: DrawerEnvironment.vue  context.ts  index.vue  type.ts  useDrawer.ts
src/components/file-card/: EditTag.vue  EditText.vue  FileCard.vue  FileContent.vue  helper.ts  index.ts  index.vue  setup.ts  tag.ts
src/components/icon/: Square.vue  Stack.vue
src/components/image-preview/: helper.ts  index.vue  useCheckTap.ts  useMouseEvent.ts  useRange.ts  useStyle.ts  useTouchEvent.ts
src/components/layout/: aside.vue  header.vue  index.vue
src/components/ui/button/: index.ts
src/lib/: Fas.ts
src/routers/: index.ts  routes.ts
src/store/: data.ts  state.ts
src/styles/: tailwind.css
src/utils/: createId.ts  deriveRipple.ts  imageCompress.ts  test.ts
src/utils/edit/: createAsyncDialog.ts  createAsyncDrawer.ts  createEditDialog.ts  createEditDrawer.ts
src/views/: index.vue
