[package]
name = "tauri-app"
version = "0.0.0"
description = "A Tauri App"
authors = [ "you" ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
tauri = { version = "1.6.8", features = [
  "protocol-all",
  "notification-all",
  "clipboard-all",
  "dialog-all",
  "fs-all",
  "path-all",
  "window-set-fullscreen",
  "window-unminimize",
  "window-start-dragging",
  "window-unmaximize",
  "window-show",
  "window-minimize",
  "window-maximize",
  "window-hide",
  "window-close",
  "shell-open",
  "devtools"
] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
tauri-plugin-persisted-scope = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
